[project]
name = " "
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.2.5",
    "httpx>=0.28.1",
    "ibm-watsonx-ai>=1.3.11",
    "mcp[cli]>=1.6.0",
    "requests>=2.32.3",
    "langchain-mcp-adapters",
    "langchain-community>=0.3.20",
    "langchain-core>=0.3.45",
    "langchain-ibm>=0.3.8",
    "langchain-mcp-adapters>=0.0.5",
    "langgraph>=0.3.16",
]
